41. Sort folder view items, as MPD does not seem to sort playlist names.
42. In folder view, allow to add folders and files at the same time.
43. Support dragging m3u and m3u8 playlists onto playqueue.
44. Fix reading embedded covers from OGG files.
45. Add root and home local browse models, allowing to add local files to play
    queue.
46. Add volume control for HTTP stream playback.

2.2.0
-----
 1. Add option to specify number of play queue tracks for dynamic playlists.
 2. Add option to set application style.
 3. Fix potential issue with priority menu items being disabled.
 4. When adding items with a custom priority, or updating a custom priority,
    add option to have this priority decrease with each item.
 5. Remove unity menu icon work-around.
 6. To support older GNOME settings daemon installations, if fail to use the
    new MediaKeys DBUS interface then use the previous.
 7. Fix desktop detection via XDG_CURRENT_DESKTOP - check for colon separated
    values.
 8. If an error is to be shown, ensure Cantata is not minimised to system tray.
 9. If the initial start-up connection fails, try again every .5 second for a
    few seconds.
10. In playlists page, internet, etc, allow back navigation to go fully back.
11. Don't try to seek if no song loaded.
12. Only use menubar for macOS builds.
13. Smart playlists - like dynamic, but do not auto update.
14. Use em-dash to as separator.
15. Add device option to only transcode if source is FLAC or WAV (detection is
    solely extension based).
16. Fix extraction of album names from DB - for use in tag editor and playlist
    rules dialogs.
17. Fix some potential security issues - thanks to Jonas Wielicki for the
    patches.
18. Only set Qt::AA_EnableHighDpiScaling for Windows builds.
19. Fix sidebar highlight for windows (at least for Windows 10).
20. Only enable system tray for Linux if org.kde.StatusNotifierWatcher DBUS
    service is registered.
21. Fix MPRIS track path.